test/expected/explain_a0i.out
explain int a[0]
            ^
13: error: array size must be greater than 0
